# kisssBusySchedule

./: CMakeLists.txt  README.md  buildTimetable.cpp  defaults.py  login.py  main.cpp  scrapedTot.txt  scraped_data.txt  scrapped_data.txt  window.cpp  window.h
resources/: maya.yaml
resources/scraped-data/: modified_courses.txt  scraped_data.txt
